[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
config = "0.15.8"
serde_json = "1.0"
num-bigint = {version = "0.4.6", features = ["serde"]}
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.1"
redis = { version = "0.29.0", features = ["tokio-comp"] }
thiserror = "2.0.11"
strum_macros = "0.27.1"
ethers = "2.0.14"
hex = "0.4.3"
dotenv = "0.15.0"
